a lot of changes

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -26,8 +26,8 @@ monitor=desc:AU Optronics 0x6693,highres@highr,auto-right,1.25
 monitor=desc:AOC 2369M BCOD79A000410,highres@highr,auto-left,1.0
 
 workspace=1, monitor:DP-3, default:true
-workspace=2
-workspace=3
+workspace=2, monitor:DP-3, default:true
+workspace=3, monitor:DP-3, default:true
 workspace=4
 workspace=5
 
@@ -91,7 +91,7 @@ device {
 # --------------------- PLUGINS -----------------------
 # -----------------------------------------------------
 exec-once = uwsm app -- hyprpaper
-exec-once = uwsm app -- hypridle
+# exec-once = uwsm app -- hypridle
 # exec-once = hyprpm reload  #-n
 
 
@@ -122,14 +122,15 @@ exec-once = $HOME/.config/hypr/scripts/theme.sh Tokyonight-Dark candy-icons Bree
 # -----------------------------------------------------
 exec-once = gnome-keyring-daemon --start --components=secrets || $ERROR_NOTIFY "gnome-keyring-daemon could not be started."
 exec-once = uwsm app -- systemctl --user start hyprpolkitagent || $ERROR_NOTIFY "hyprpolkitagent could not be started."
-# exec-once = systemctl --user start hyprpolkitagent && $SUCCESS_NOFITY "hyprpolkitagent started." || $ERROR_NOTIFY "hyprpolkitagent could not be started."
 # exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 && $SUCCESS_NOFITY "polkit-gnome started." || $ERROR_NOTIFY "polkit-gnome could not be started."
+
+execr = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; exit}')" -c 000000  # set color for device
+# exec-once = systemctl --user start hyprpolkitagent && $SUCCESS_NOFITY "hyprpolkitagent started." || $ERROR_NOTIFY "hyprpolkitagent could not be started."
 
 exec = uwsm app -- qs kill; qs
 # exec = uwsm app -- pkill quickshell; quickshell
 # exec = pkill tgshell; ~/.config/fabric/.venv/bin/python ~/.config/fabric/main.py
 # exec = ags list | grep astal && ags quit --instance astal; ags run || $ERROR_NOTIFY "Aylurs GTK Shell could not be started."
-
 
 # -----------------------------------------------------
 # -------------------- ENVIRONMENT --------------------
