--- a/hyprland/.config/hypr/keybindings.conf
+++ b/hyprland/.config/hypr/keybindings.conf
@@ -1,50 +1,44 @@
+# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+
 binds {
-    # Quickshell
+    # ------ Overall desktop ------
     bind = SUPER, R, global , tgshell:launcher
+    bind = SUPER_SHIFT, R, exec, hyprctl reload
     bind = SUPER_SHIFT, Q, global , tgshell:session
 
-    # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-    bind = ALT, TAB, exec, hyprctl dispatch overview:toggle
-    bind = SUPER, RETURN, exec, bash -c "[ $(hyprctl activeworkspace | grep windows: |  cut -d" " -f2) -ge "1" ] && kitty || kitty --title float"
-    bind = CTRL_ALT, L, exec, hyprlock
-    bind = SUPER_SHIFT, L, exec, uwsm app -- sddm-greeter-qt6 --test-mode --theme /usr/share/sddm/themes/sddm-astronaut-theme/
-    bind = CTRL_ALT, N, exec, brave --app=https://netflix.com
-    bind = SUPER_SHIFT, P, exec, uwsm app -- hyprpicker -a
-
+    bind = SUPER, F, togglefloating
+    bind = SUPER, M, fullscreen
+    bind = SUPER, P, pin
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 50% 40%
     bind = SUPER, C, centerwindow
+    bind = SUPER, O, layoutmsg, swapwithmaster master
+    bind = SUPER, U, exec, $HOME/.config/hypr/scripts/dispatch.sh $(hyprctl activeworkspace | grep ID | cut -d" " -f3 | head -n 1) --move-workspace
+    bind = SUPER_SHIFT, C, killactive
+
+
+    # ------ Applications ------
+    bind = SUPER, RETURN, exec, bash -c "[ $(hyprctl activeworkspace | grep windows: |  cut -d" " -f2) -ge "1" ] && kitty || kitty --title centerfloat"
 
     bind = SUPER, E, exec, kitty -e yazi ~
     bind = SUPER_SHIFT, E, exec, nemo ~
-    bind = SUPER, F, togglefloating
-    bind = SUPER, M, fullscreen
 
-    bind = SUPER, P, pin
-    bind = SUPER, O, layoutmsg, swapwithmaster master
-    bind = SUPER, U, exec, ~/.config/hypr/scripts/dispatch.sh $(hyprctl activeworkspace | grep ID | cut -d" " -f3 | head -n 1) --move-workspace
+    # ------ Shortcuts ------
+    bind = SUPER_SHIFT, Y, exec, mpv $(playerctl metadata xesam:url)
+    # bind = SUPER_SHIFT, P, exec, mpv $(playerctl -p firefox metadata | grep xesam:url | grep -oP '(https?://\S+)')
 
-    bind = SUPER_SHIFT, C, killactive
-    # bind = SUPER_SHIFT, Q, exit
+    bind = SUPER_SHIFT, Z, exec, hyprctl dispatch submap reset; hypr-zoom -duration=250 -steps=150 -easing=OutBack -easingOut=InBack -interp=Linear
 
-    bind = SUPER_SHIFT, R, exec, hyprctl reload
+    bind = SUPER_SHIFT, L, exec, uwsm app -- sddm-greeter-qt6 --test-mode --theme /usr/share/sddm/themes/sddm-astronaut-theme/
+    bind = CTRL_ALT, L, exec, hyprlock
 
-    bind = SUPER_SHIFT, P, exec, mpv $(playerctl -p firefox metadata | grep xesam:url | grep -oP '(https?://\S+)')
-
-    # # Aylur's GTK Shell Windows and Kando Pie Menu
-    # bind = SUPER, R, exec, rofi -show drun
-
-    # Capturing
     bind = , PRINT, exec, hyprshot -m output -m active -z -o ~/Pictures/Screenshots
     bind = SHIFT, PRINT, exec, hyprshot -m window -z -o ~/Pictures/Screenshots
     bind = SUPER, PRINT, exec, hyprshot -m region -z -o ~/Pictures/Screenshots
-    # Manual region screenshot while opening image in swappy
-    bind = SUPER_SHIFT, S, exec, $HOME/.local/bin/capture --image
-    bind = SUPER_SHIFT, PRINT, exec, $HOME/.local/bin/capture --video
+    bind = SUPER_SHIFT, S, exec, $HOME/.config/hypr/scripts/capture.sh --image
+    bind = SUPER_SHIFT, V, exec, $HOME/.local/bin/capture --video
 
-    # Misc
-    bind = SUPER, Y, exec, mpv $(playerctl metadata xesam:url)
-
+    # ------ Moving and resizing ------
     bind = SUPER, H, movefocus, l
     bind = SUPER, L, movefocus, r
     bind = SUPER, K, movefocus, u
@@ -56,6 +50,10 @@ binds {
     bind = SUPER_SHIFT, k, resizeactive, 0 -$INCREMENT
     bind = SUPER_SHIFT, j, resizeactive, 0 $INCREMENT
 
+    bindm = SUPER, mouse:272, movewindow
+    bindm = SUPER, mouse:273, resizewindow
+
+    # ------ Workspaces ------
     bind = SUPER, 1, workspace, 1
     bind = SUPER, 2, workspace, 2
     bind = SUPER, 3, workspace, 3
@@ -73,9 +71,7 @@ binds {
     bind = SUPER, mouse_down, workspace, e+1
     bind = SUPER, mouse_up, workspace, e-1
 
-    bindm = SUPER, mouse:272, movewindow
-    bindm = SUPER, mouse:273, resizewindow
-
+    # ------ Audio control ------
     bindl = , XF86AudioPlay, exec, playerctl play-pause
     bindl = , XF86AudioPrev, exec, playerctl previous
     bindl = , XF86AudioNext, exec, playerctl next
@@ -84,19 +80,6 @@ binds {
     bindle = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/sound.sh --down
     bindl = , XF86AudioMute, exec, ~/.config/hypr/scripts/sound.sh --mute
 
-    binde = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh --up
-    binde = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh --down
-
-    # Submap for Aylurs GTK Shell
-    bind = SUPER, SPACE, submap, ags
-    submap = ags
-
-    bind = , P, exec, hyprctl dispatch submap reset; ags toggle window_shutdown
-    bind = , W, exec, hyprctl dispatch submap reset; ags toggle window_wallpaper
-    bind = , L, exec, hyprctl dispatch submap reset; kitty -e tail -f ~/.config/ags/ags.log
-    bind = , U, exec, hyprctl dispatch submap reset; ags toggle window_system_updates
-    bind = , N, exec, hyprctl dispatch submap reset; ags toggle window_network
-    bind = , Z, exec, hyprctl dispatch submap reset; hypr-zoom -duration=250 -steps=150 -easing=OutBack -easingOut=InBack -interp=Linear
-    bind = , ESCAPE, exec, hyprctl dispatch submap reset
-    submap = reset
+    bindle = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh --up
+    bindle = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh --down
 }
