--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1163,8 +1163,10 @@ confirm_os_window_close 0
 
 #: Color scheme {{{
 
-foreground #edecee
-background #121212
+# foreground #edecee
+# background #121212
+foreground #E5E1E9
+background #131317
 
 #: The foreground and b ackground colors.
 
