--- a/mangohud/.config/MangoHud/MangoHud.conf
+++ b/mangohud/.config/MangoHud/MangoHud.conf
@@ -8,17 +8,17 @@
 ## prints possible options on stdout
 # help
 
-hud_elements=FPS,GPU,CPU,MEM,IO,FRAME_timing
+# hud_elements=FPS,GPU,CPU,MEM,IO,FRAME_timing
 ################ PERFORMANCE #################
 
 ### Limit the application FPS. Comma-separated list of one or more FPS values (e.g. 0,30,60). 0 means unlimited (unless VSynced)
 fps_limit= 72,80,144,160
 
 ### early = wait before present, late = wait after present
-# fps_limit_method=
+fps_limit_method=early
 
 ### VSync [0-3] 0 = adaptive; 1 = off; 2 = mailbox; 3 = on
-# vsync=-1
+vsync=0
 
 ### OpenGL VSync [0-N] 0 = off; >=1 = wait for N v-blanks, N > 1 acts as a FPS limiter (FPS = display refresh rate / N)
 # gl_vsync=-2
@@ -34,7 +34,7 @@ fps_limit= 72,80,144,160
 # bicubic
 
 ### Force trilinear filtering
-trilinear
+# trilinear
 
 ### Disable linear texture filtering. Makes textures look blocky
 # retro
@@ -46,7 +46,7 @@ trilinear
 
 ### pre defined presets
 # -1 = default
-#  0 = no display
+# 0 = no display
 # 1 = fps only
 #  2 = horizontal view
 #  3 = extended
@@ -65,7 +65,7 @@ trilinear
 ### Display the current system time
 time
 ## removes the time label
-time_no_label
+# time_no_label
 
 ### Time formatting examples
 ## %H:%M
@@ -79,7 +79,7 @@ time_no_label
 ### Display the current GPU information
 ## Note: gpu_mem_clock and gpu_mem_temp also need "vram" to be enabled
 gpu_stats
-#gpu_temp
+gpu_temp
 # gpu_junction_temp
 # gpu_core_clock
 # gpu_mem_temp
@@ -97,7 +97,7 @@ gpu_power
 ### Display the current CPU information
 cpu_stats
 cpu_temp
-# cpu_power
+cpu_power
 #cpu_text=
 # cpu_mhz
 # cpu_load_change
@@ -132,7 +132,8 @@ cpu_temp
 # battery_time
 
 ### Display FPS and frametime
-# fps
+show_fps_limit
+fps
 fps_sampling_period=500
 # fps_color_change
 # fps_value=60,100,144
@@ -154,7 +155,7 @@ fps_sampling_period=500
  # gpu_name
 # vulkan_driver
 # wine
-#exec_name
+# exec_name
 # winesync
 
 ### Display loaded MangoHud architecture
@@ -170,7 +171,7 @@ frame_timing
 
 ### Gamescope related options
 ## Display the status of FSR (only works in gamescope)
-# fsr
+fsr
 ## Hides the sharpness info for the `fsr` option (only available in gamescope)
 # hide_fsr_sharpness
 ## Shows the graph of gamescope app frametimes and latency (only on gamescope obviously)
@@ -195,7 +196,7 @@ frame_timing
 # fan
 
 ### Display current FPS limit
-# show_fps_limit
+show_fps_limit
 
 ### Display the current resolution
 # resolution
@@ -247,7 +248,7 @@ font_file=/usr/share/fonts/OTF/MonaspaceKrypton-SemiBold.otf
 # text_outline_thickness = 1.5
 
 ### Change the hud position
-position=top-left
+position=top-center
 
 ### Change the corner roundness
 round_corners=0
@@ -260,7 +261,7 @@ hud_no_margin
 
 ### Display MangoHud in a horizontal position
 horizontal
-#horizontal_stretch
+# horizontal_stretch
 
 ### Disable / hide the hud by default
 # no_display
@@ -276,8 +277,8 @@ horizontal
 # cellpadding_y=-0.085
 
 ### Hud transparency / alpha
-background_alpha=0.9
-# alpha=1.0
+background_alpha=0.8
+alpha=0.75
 
 ### FCAT overlay
 ### This enables an FCAT overlay to perform frametime analysis on the final image stream.
@@ -333,10 +334,10 @@ gpu_color=2E9762
 ### Change toggle keybinds for the hud & logging
 toggle_hud=Shift_R+F12
 toggle_fps_limit=Shift_R+F11
-# toggle_hud_position=Shift_L+F1
-# toggle_logging=Shift_L+F2
-# reload_cfg=Shift_L+F4
-# upload_log=Shift_L+F3
+toggle_hud_position=
+toggle_logging=
+reload_cfg=
+upload_log=
 
 #################### LOG #####################
 ### Automatically start the log after X seconds
