--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -9,6 +9,12 @@
 {
     // ------ General ------
     "agent": {
+        "enabled": false,
+        "play_sound_when_agent_done": true,
+        "default_model": {
+            "provider": "openai",
+            "model": "o3-mini"
+        },
         "model_parameters": [],
         "inline_assistant_model": {
             "provider": "zed.dev",
@@ -16,6 +22,7 @@
         },
         "version": "2"
     },
+    "features": { "edit_prediction_provider": "none", "copilot": false },
     "vim_mode": true,
     "base_keymap": "VSCode",
     "telemetry": {
@@ -23,12 +30,11 @@
         "diagnostics": false
     },
     // ------ Agent, AI, whatever ------
-    "features": { "edit_prediction_provider": "zed", "copilot": false },
     // Vanity
     "theme": {
         "mode": "dark",
         "light": "Catppuccin Mocha",
-        "dark": "Tailwind Syntax"
+        "dark": "Catppuccin Mocha - No Italics"
     },
     "icon_theme": "Material Icon Theme",
     "ui_font_size": 13,
@@ -53,6 +59,15 @@
     "project_panel": { "dock": "left", "indent_size": 16 },
     // ------ Editor ------
     "cursor_blink": true,
+    // Visually show tabs and spaces  (none, all, selection, boundary, trailing)
+    "show_whitespaces": "all",
+    "indent_guides": {
+        "enabled": true,
+        "line_width": 1, // Width of guides in pixels [1-10]
+        "active_line_width": 1, // Width of active guide in pixels [1-10]
+        "coloring": "fixed", // disabled, fixed, indent_aware
+        "background_coloring": "disabled" // disabled, indent_aware
+    },
     "git": { "git_gutter": "tracked_files", "inline_blame": { "enabled": true } },
     "relative_line_numbers": true,
     "preferred_line_length": 160,
@@ -115,20 +130,21 @@
             }
         },
         "background.appearance": "blurred",
-        "background": "#121212",
-        "editor.background": "#121212",
-        "editor.gutter.background": "#121212",
-        "tab_bar.background": "#121212",
-        "terminal.background": "#121212",
-        "toolbar.background": "#121212",
-        "tab.active_background": "#0f0f0f",
-        "tab.inactive_background": "#121212",
-        "status_bar.background": "#121212",
-        "title_bar.background": "#121212",
-        "panel.background": "#121212",
-        // "border.variant": "#121212",
-        "scrollbar.track.border": "#121212",
-        "editor.active_line.background": "#121212"
+        "background": "#131317",
+        "editor.background": "#131317",
+        "editor.gutter.background": "#131317",
+        "tab_bar.background": "#131317",
+        "terminal.background": "#131317",
+        "toolbar.background": "#131317",
+        // "tab.active_background": "#1f1f1f",
+        "tab.inactive_background": "#131317",
+        "status_bar.background": "#131317",
+        "title_bar.background": "#131317",
+        "title_bar.inactive_background": "#131317",
+        "panel.background": "#131317",
+        "border.variant": "#131317",
+        "scrollbar.track.border": "#131317",
+        "editor.active_line.background": "#131317"
     },
     "lsp": {
         "pyright": {
