hyprland config restructure

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,286 +1,5 @@
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/
 
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
+$HYPR_NVIDIA = 1  # uncomment to disable settings
 
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-$SUCCESS_NOTIFY = hyprctl notify -1 10000 "rgb(07ffca)"
-$ERROR_NOTIFY = hyprctl notify -1 10000 "rgb(ff6767)"
-
-source = $HOME/.config/hypr/keybindings.conf
-source = $HOME/.config/hypr/rules.conf
-
-
-# -----------------------------------------------------
-# -------------------- MONITORS -----------------------
-# -----------------------------------------------------
-# Desktop
-monitor=desc:ASUSTek COMPUTER INC PG27UQR R7LMQS169187,highres@highr,auto-right,2.0
-monitor=desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,highres@highr,auto-left,2.0
-
-# Lenovo X13Gen5
-monitor=desc:AU Optronics 0x6693,highres@highr,auto-right,1.25
-monitor=desc:AOC 2369M BCOD79A000410,highres@highr,auto-left,1.0
-
-workspace=1, monitor:DP-3, default:true
-workspace=2, monitor:DP-3, default:true
-workspace=3, monitor:DP-3, default:true
-workspace=4
-workspace=5
-
-xwayland {
-    force_zero_scaling = true
-    use_nearest_neighbor = false
-}
-
-env = GDK_SCALE,1
-
-# -----------------------------------------------------
-# --------------------- KEYBOARD ----------------------
-# -----------------------------------------------------
-env = XKB_DEFAULT_LAYOUT, us
-env = XKB_DEFAULT_VARIANT, altgr-intl
-env = XKB_DEFAULT_OPTIONS, compose:menu,level3:ralt_switch
-
-# https://wiki.hyprland.org/Configuring/Variables/#input
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options = compose:ralt
-    kb_rules =
-
-    repeat_delay = 250
-    repeat_rate = 50
-
-    follow_mouse = 1
-    scroll_factor = 2.5
-
-    sensitivity = -0.75
-    accel_profile = adaptive
-
-    touchpad {
-        disable_while_typing = true
-        natural_scroll = true
-        middle_button_emulation = false
-        scroll_factor = 0.5
-    }
-}
-
-device {
-    name = elan06c4:00-04f3:3209-touchpad
-    sensitivity = 0.25
-
-}
-
-device {
-    name = tpps/2-synaptics-trackpoint
-    sensitivity = -0.5
-}
-
-device {
-    name = microsoft-microsoft-pro-intellimouse-mouse
-    sensitivity = 0.25
-}
-
-
-# -----------------------------------------------------
-# --------------------- PLUGINS -----------------------
-# -----------------------------------------------------
-exec-once = uwsm app -- hyprpaper
-# exec-once = uwsm app -- hypridle
-# exec-once = hyprpm reload  #-n
-
-
-# -----------------------------------------------------
-# --------------------- CURSOR ------------------------
-# -----------------------------------------------------
-$CURSOR = BreezeX-RosePine-Linux        # BreezeX-RosePineDawn-Linux BreezeX-RosePine-Linux
-$HYPR_CURSOR = rose-pine-hyprcursor     # currently no light/dawn version available
-$CURSOR_SIZE = 32                       # 16, 24, 32, 48
-
-env = XCURSOR_SIZE, $CURSOR_SIZE
-env = XCURSOR_THEME, $CURSOR
-
-env = HYPRCURSOR_SIZE, $CURSOR_SIZE
-env = HYPRCURSOR_THEME, $HYPR_CURSOR
-
-cursor {
-    no_hardware_cursors = true
-}
-
-env = GTK_THEME,Tokyonight-Dark
-
-exec-once = $HOME/.config/hypr/scripts/theme.sh Tokyonight-Dark candy-icons BreezeX-RosePine-Linux 32 'CaskaydiaCove Nerd Font 10'
-
-
-# -----------------------------------------------------
-# -------------------- AUTOSTART ----------------------
-# -----------------------------------------------------
-exec-once = gnome-keyring-daemon --start --components=secrets || $ERROR_NOTIFY "gnome-keyring-daemon could not be started."
-exec-once = uwsm app -- systemctl --user start hyprpolkitagent || $ERROR_NOTIFY "hyprpolkitagent could not be started."
-# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 && $SUCCESS_NOFITY "polkit-gnome started." || $ERROR_NOTIFY "polkit-gnome could not be started."
-
-execr = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; exit}')" -c 000000  # set color for device
-# exec-once = systemctl --user start hyprpolkitagent && $SUCCESS_NOFITY "hyprpolkitagent started." || $ERROR_NOTIFY "hyprpolkitagent could not be started."
-
-exec = uwsm app -- qs kill; qs
-# exec = uwsm app -- pkill quickshell; quickshell
-# exec = pkill tgshell; ~/.config/fabric/.venv/bin/python ~/.config/fabric/main.py
-# exec = ags list | grep astal && ags quit --instance astal; ags run || $ERROR_NOTIFY "Aylurs GTK Shell could not be started."
-
-# -----------------------------------------------------
-# -------------------- ENVIRONMENT --------------------
-# -----------------------------------------------------
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-# env = WLR_RENDERER, vulkan
-# env = WLR_SCALE_FILTER, nearest
-
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
-
-env = QT_AUTO_SCREEN_SCALE_FACTOR, 1
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_QPA_PLATFORM,wayland;xcb
-env = QT_QPA_PLATFORMTHEME,qt5ct
-env = XDG_MENU_PREFIX,arch-
-
-env = XDG_SESSION_TYPE,wayland
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_DESKTOP,Hyprland
-
-env = _JAVA_AWT_WM_NONEREPARENTING,1
-env = CLUTTER_BACKEND,wayland
-
-# See https://wiki.hyprland.org/Nvidia
-env = GBM_BACKEND,nvidia-drm
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = NVD_BACKEND,direct
-env = __GL_GSYNC_ALLOWED,0
-env = __GL_VRR_ALLOWED,0
-
-env = MOZ_DISABLE_RDD_SANDBOX,1
-env = EGL_PLATFORM,wayland
-env = MOZ_ENABLE_WAYLAND,1
-
-
-
-# -----------------------------------------------------
-# -------------------- SETTINGS -----------------------
-# -----------------------------------------------------
-# https://wiki.hyprland.org/Configuring/Variables/#general
-general {
-    gaps_out = 0
-    gaps_in = 0
-
-    border_size = 0
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    	# col.active_border = rgba(404042ff)
-    	# col.inactive_border = rgba(83858aff)/
-
-    # col.active_border = rgba(33ccffff) rgba(00ff99ff) 45deg
-    # col.active_border = rgba(1a1a1aee)
-    # col.inactive_border = rgba(000000FF)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    layout = dwindle
-
-    snap {
-        enabled = true
-        window_gap = 0
-    }
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
-decoration {
-    rounding = 0
-
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    shadow {
-        enabled = false
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = false
-        size = 3
-        passes = 1
-        vibrancy = 0.1696
-    }
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#animations
-animations {
-    enabled = false
-
-    # https://www.cssportal.com/css-cubic-bezier-generator/
-    bezier = easeOutExpo, 0.19, 1, 0.22, 1
-    bezier = easeInQuart, 0.895, 0.03, 0.685, 0.22
-    bezier = easeInOut,0.65, 0, 0.35, 1
-    bezier = bounceOut,  0.57, 1.4, 0.24, 0.95
-    bezier = scurve, 0.98, 0.01, 0.02, 0.98
-    bezier = overshot, 0.13, 0.99, 0.29, 1.1
-
-    # slide, slidevert, fade
-    animation = windows,    1,  2,      overshot
-    animation = windowsIn,  1,  7,      easeOutExpo,    slide
-    animation = windowsOut, 1,  7,      easeOutExpo,    slide
-    # animation = border,     1,  2,      easeInQuart
-    # animation = borderangle,1,  25,     easeInQuart,    loop
-    animation = fadeIn,     1,  10,     default
-    animation = fadeOut,    1,  10,     default
-    animation = fadeSwitch, 1,  15,     default
-    animation = fadeDim,    1,  25,     default
-    animation = workspaces, 1,   4,     easeInQuart,    slidevert
-    animation = layers,     1,   5,     scurve,         slide       # rofi
-
-    first_launch_animation = true
-}
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/
-dwindle {
-    pseudotile = yes
-    preserve_split = yes
-    force_split = 2
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/
-master {
-    new_status = master
-    new_on_top = true
-}
-
-misc {
-    disable_autoreload = false
-    disable_hyprland_logo = true
-    animate_manual_resizes = true
-    animate_mouse_windowdragging = true
-    middle_click_paste = false
-    force_default_wallpaper = -1
-    vfr = true
-    animate_manual_resizes = true
-    new_window_takes_over_fullscreen = 2
-}
-
-cursor {
-    hide_on_key_press = true
-}
-
-experimental {
-    xx_color_management_v4 = true
-}
+source = ./conf.d/init/*.conf
+source = ./conf.d/*.conf
