--- a/hyprland/.config/hypr/conf.d/keybinds.conf
+++ b/hyprland/.config/hypr/conf.d/keybinds.conf
@@ -1,4 +1,3 @@
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
 binds {
     # ------ Overall desktop ------
@@ -72,13 +71,15 @@ binds {
     bind = SUPER, mouse_up, workspace, e-1
 
     # ------ Audio control ------
+    bindl = , XF86AudioNext, exec, playerctl next
+    bindl = , XF86AudioPause, exec, playerctl play-pause
     bindl = , XF86AudioPlay, exec, playerctl play-pause
     bindl = , XF86AudioPrev, exec, playerctl previous
-    bindl = , XF86AudioNext, exec, playerctl next
 
-    bindle = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/sound.sh --up
-    bindle = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/sound.sh --down
-    bindl = , XF86AudioMute, exec, ~/.config/hypr/scripts/sound.sh --mute
+    bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
+    bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
+    bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+    bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
     bindle = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh --up
     bindle = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh --down
