--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -19,10 +19,9 @@
         "inline_assistant_model": {
             "provider": "zed.dev",
             "model": "claude-3-7-sonnet-thinking-latest"
-        },
-        "version": "2"
+        }
     },
-    "features": { "edit_prediction_provider": "none", "copilot": false },
+    "features": { "edit_prediction_provider": "none" },
     "vim_mode": true,
     "base_keymap": "VSCode",
     "telemetry": {
@@ -71,19 +70,11 @@
     "git": { "git_gutter": "tracked_files", "inline_blame": { "enabled": true } },
     "relative_line_numbers": true,
     "preferred_line_length": 160,
-    // "wrap_guides": [120],
-    // "show_wrap_guides": true,
+    "wrap_guides": [120],
+    "show_wrap_guides": true,
+    "use_autoclose": false,
     "inlay_hints": { "enabled": true },
     "diagnostics": {
-        "include_warnings": true,
-        "inline": {
-            "enabled": true,
-            "update_debounce_ms": 150,
-            "padding": 16,
-            "min_column": 0
-        }
-    },
-    "diagnostic": {
         "include_warnings": false,
         "inline": {
             "enabled": true,
@@ -99,7 +90,6 @@
     "vim": {
         "default_mode": "normal",
         "use_system_clipboard": "always",
-        "use_multiline_find": true,
         "use_smartcase_find": true,
         "highlight_on_yank_duration": 150
     },
@@ -114,6 +104,8 @@
         }
     },
     "experimental.theme_overrides": {
+        // "hint.background": "#333a50",
+        // "error.background": "#8d3250",
         "players": [
             {
                 "cursor": "#FF6767",
