new hyprland structure

--- a/hyprland/.config/hypr/conf.d/autostart.conf
+++ b/hyprland/.config/hypr/conf.d/autostart.conf
@@ -1,9 +1,11 @@
 
 exec-once = hyprpaper
-exec-once = hypridle
+# exec-once = hypridle  # will be controlled via systemctl
 
 exec-once = gnome-keyring-daemon --start --components=secrets || $NOTIFY_ERROR "gnome-keyring-daemon could not be started."
 exec-once = systemctl --user start hyprpolkitagent || $NOTIFY_ERROR "hyprpolkitagent could not be started."
 
 exec = killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 quickshell
+# exec = killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 quickshell -c $HOME/.config/quickshell_new
+
 exec = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; exit}')" -c 000000
