general commit after traveling

--- a/hyprland/.config/hypr/conf.d/keybinds.conf
+++ b/hyprland/.config/hypr/conf.d/keybinds.conf
@@ -1,58 +1,95 @@
-
 binds {
-    # ------ Overall desktop ------
-    bind = SUPER, R, global , tgshell:launcher
-    bind = SUPER_SHIFT, R, exec, hyprctl reload
-    bind = SUPER_SHIFT, Q, global , tgshell:session
+    # ============================================================
+    # GLOBAL / DESKTOP CONTROL
+    # ============================================================
 
+    # Reload Hyprland config
+    bind = SUPER_SHIFT, R, exec, hyprctl reload
+
+    # Window state toggles
     bind = SUPER, F, togglefloating
     bind = SUPER, M, fullscreen
     bind = SUPER, P, pin
-    bind = SUPER, C, setfloating
-    bind = SUPER, C, resizeactive, exact 50% 40%
-    bind = SUPER, C, centerwindow
+
+    # Center a window as float
+    bind = SUPER, C, exec, sh -c 'hyprctl dispatch setfloating active; hyprctl dispatch resizeactive exact 50% 40%; hyprctl dispatch centerwindow'
+
+    # Master layout control / swap
     bind = SUPER, O, layoutmsg, swapwithmaster master
+
+    # Swap workspace to next monitor
     bind = SUPER, U, exec, $HOME/.config/hypr/scripts/dispatch.sh $(hyprctl activeworkspace | grep ID | cut -d" " -f3 | head -n 1) --move-workspace
+
+    # Kill active window
     bind = SUPER_SHIFT, C, killactive
 
 
-    # ------ Applications ------
-    bind = SUPER, RETURN, exec, bash -c "[ $(hyprctl activeworkspace | grep windows: |  cut -d" " -f2) -ge "1" ] && kitty || kitty --title centerfloat"
+    # ============================================================
+    # APPLICATION LAUNCHERS
+    # ============================================================
 
+    # Terminal: open centered kitty when no windows on workspace, else normal kitty
+    bind = SUPER, RETURN, exec, kitty
+    bind = SUPER_SHIFT, RETURN, exec, kitty --title centerfloat
+ 
+    # File managers
     bind = SUPER, E, exec, kitty -e yazi ~
     bind = SUPER_SHIFT, E, exec, nemo ~
 
-    # ------ Shortcuts ------
+    # Fun: Matrix effect (toggle) — uses kitty kitten panel as background
+    bind = SUPER_SHIFT, M, exec, pkill cmatrix || kitty +kitten panel --edge=background -o font_size=12 cmatrix
+
+
+    # ============================================================
+    # SHORTCUTS / UTILITIES
+    # ============================================================
+
+    # Cast currently playing media URL to mpv
     bind = SUPER_SHIFT, Y, exec, mpv $(playerctl metadata xesam:url)
+    # Alternative (commented): try to read from Firefox player specifically
     # bind = SUPER_SHIFT, P, exec, mpv $(playerctl -p firefox metadata | grep xesam:url | grep -oP '(https?://\S+)')
 
+    # Zoom toggle
     bind = SUPER_SHIFT, Z, exec, hyprctl dispatch submap reset; hypr-zoom -duration=250 -steps=150 -easing=OutBack -easingOut=InBack -interp=Linear
 
-    bind = SUPER_SHIFT, L, exec, uwsm app -- sddm-greeter-qt6 --test-mode --theme /usr/share/sddm/themes/sddm-astronaut-theme/
+    # Lock screen
     bind = CTRL_ALT, L, exec, hyprlock
 
+    # Screenshots (Hyprshot)
     bind = , PRINT, exec, hyprshot -m output -m active -z -o ~/Pictures/Screenshots
     bind = SHIFT, PRINT, exec, hyprshot -m window -z -o ~/Pictures/Screenshots
     bind = SUPER, PRINT, exec, hyprshot -m region -z -o ~/Pictures/Screenshots
     bind = SUPER_SHIFT, S, exec, $HOME/.config/hypr/scripts/capture.sh --image
     bind = SUPER_SHIFT, V, exec, $HOME/.local/bin/capture --video
 
-    # ------ Moving and resizing ------
+
+    # ============================================================
+    # FOCUS / RESIZE / MOUSE
+    # ============================================================
+
+    # Focus movement (HJKL)
     bind = SUPER, H, movefocus, l
     bind = SUPER, L, movefocus, r
     bind = SUPER, K, movefocus, u
     bind = SUPER, J, movefocus, d
 
+    # Resizing with increment
     $INCREMENT = 50
     bind = SUPER_SHIFT, l, resizeactive, $INCREMENT 0
     bind = SUPER_SHIFT, h, resizeactive, -$INCREMENT 0
     bind = SUPER_SHIFT, k, resizeactive, 0 -$INCREMENT
     bind = SUPER_SHIFT, j, resizeactive, 0 $INCREMENT
 
+    # Mouse binds
     bindm = SUPER, mouse:272, movewindow
     bindm = SUPER, mouse:273, resizewindow
 
-    # ------ Workspaces ------
+
+    # ============================================================
+    # WORKSPACES
+    # ============================================================
+
+    # Switch to workspaces 1–6
     bind = SUPER, 1, workspace, 1
     bind = SUPER, 2, workspace, 2
     bind = SUPER, 3, workspace, 3
@@ -60,27 +97,90 @@ binds {
     bind = SUPER, 5, workspace, 5
     bind = SUPER, 6, workspace, 6
 
-    bind = SUPER SHIFT, 1, movetoworkspace, 1
-    bind = SUPER SHIFT, 2, movetoworkspace, 2
-    bind = SUPER SHIFT, 3, movetoworkspace, 3
-    bind = SUPER SHIFT, 4, movetoworkspace, 4
-    bind = SUPER SHIFT, 5, movetoworkspace, 5
-    bind = SUPER SHIFT, 6, movetoworkspace, 6
+    # Move to workspace 1–6
+    bind = SUPER_SHIFT, 1, movetoworkspace, 1
+    bind = SUPER_SHIFT, 2, movetoworkspace, 2
+    bind = SUPER_SHIFT, 3, movetoworkspace, 3
+    bind = SUPER_SHIFT, 4, movetoworkspace, 4
+    bind = SUPER_SHIFT, 5, movetoworkspace, 5
+    bind = SUPER_SHIFT, 6, movetoworkspace, 6
 
+    # Scroll through workspaces
     bind = SUPER, mouse_down, workspace, e+1
     bind = SUPER, mouse_up, workspace, e-1
 
-    # ------ Audio control ------
-    bindl = , XF86AudioNext, exec, playerctl next
-    bindl = , XF86AudioPause, exec, playerctl play-pause
-    bindl = , XF86AudioPlay, exec, playerctl play-pause
-    bindl = , XF86AudioPrev, exec, playerctl previous
 
-    bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
-    bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
-    bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-    bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+    # ============================================================
+    # MEDIA / AUDIO / BRIGHTNESS
+    # ============================================================
 
-    bindle = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh --up
-    bindle = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh --down
+    # Media transport (playerctl)
+    bindl  = , XF86AudioNext, exec, playerctl next
+    bindl  = , XF86AudioPause, exec, playerctl play-pause
+    bindl  = , XF86AudioPlay, exec, playerctl play-pause
+    bindl  = , XF86AudioPrev, exec, playerctl previous
+
+    # Volume & mic (wpctl / PipeWire)
+    bindle = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
+    bindle = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
+    bindl  = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+    bindl  = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
+    # Brightness (brightnessctl)
+    binde  = ,XF86MonBrightnessUp,   exec, brightnessctl set +5%
+    binde  = ,XF86MonBrightnessDown, exec, brightnessctl set 5%-
+
+
+    # ============================================================
+    # QUICKSELL SESSIONS (CONDITIONAL)
+    # ============================================================
+
+    # ------------------------------------------------------------
+    # NOCTALIA (active when HYPR_NOCTALIA is defined)
+    # ------------------------------------------------------------
+
+    # hyprlang if HYPR_NOCTALIA
+
+    # Unbind potential conflicts
+    unbind = SUPER, R
+    unbind = SUPER, S
+    unbind = SUPER_SHIFT, Q
+    unbind = CTRL_ALT, L
+    unbind = ,XF86MonBrightnessUp
+    unbind = ,XF86MonBrightnessDown
+
+    bind = CTRL_ALT, L, exec, qs -c noctalia ipc call lockScreen toggle
+
+    # NOCTALIA drawers / actions (qs IPC)
+    bind = SUPER, R, exec, qs -c noctalia ipc call launcher toggle
+    bind = SUPER, S, exec, qs -c noctalia ipc call controlCenter toggle
+    bind = SUPER_SHIFT, Q, exec, qs -c noctalia ipc call sessionMenu toggle
+
+    # Override brightness keys to use NOCTALIA IPC
+    binde = ,XF86MonBrightnessUp, exec, qs -c noctalia ipc call brightness increase
+    binde = ,XF86MonBrightnessDown, exec, qs -c noctalia ipc call brightness decrease
+
+    # hyprlang endif
+
+
+    # ------------------------------------------------------------
+    # CAELESTIA (active when HYPR_CAELESTIA is defined)
+    # ------------------------------------------------------------
+
+    # hyprlang if HYPR_CAELESTIA
+
+    # Unbind potential conflicts
+    unbind = SUPER, R
+    unbind = SUPER, D
+    unbind = SUPER, S
+    unbind = SUPER_SHIFT, Q
+
+    # CAELESTIA drawers / actions (caelestia CLI)
+    bind = SUPER, R, exec, caelestia shell drawers toggle launcher
+    bind = SUPER, D, exec, caelestia shell drawers toggle dashboard
+    bind = SUPER, S, exec, caelestia shell drawers toggle sidebar
+    bind = SUPER_SHIFT, Q, exec, caelestia shell drawers toggle session
+
+    # hyprlang endif
 }
+
