--- a/hyprland/.config/hypr/conf.d/settings.conf
+++ b/hyprland/.config/hypr/conf.d/settings.conf
@@ -5,6 +5,9 @@ general {
 
     border_size = 0
 
+    col.active_border = rgba(aaaaaAff)
+    col.inactive_border = rgba(444444ff)
+
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
