--- a/hyprland/.config/hypr/conf.d/vanity.conf
+++ b/hyprland/.config/hypr/conf.d/vanity.conf
@@ -23,7 +23,7 @@ animations {
     animation = workspaces, 1,   4,     easeInQuart,    slidevert
     animation = layers,     1,   5,     scurve,         slide
 
-    first_launch_animation = true
+    # first_launch_animation = true
 }
 
 cursor {
