--- a/hyprland/.config/hypr/conf.d/workspaces.conf
+++ b/hyprland/.config/hypr/conf.d/workspaces.conf
@@ -1,7 +1,7 @@
 
-workspace=1, monitor:DP-3, default:true
-workspace=2, monitor:DP-3, default:true
-workspace=3, monitor:DP-3, default:true
+workspace=1
+workspace=2
+workspace=3
 workspace=4
 workspace=5
 workspace=6
