--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -34,7 +34,7 @@ bold_italic_font Monaspace Krypton
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 11.0
+font_size 13.0
 
 #: Font size (in pts).
 
@@ -259,8 +259,7 @@ font_size 11.0
 #: }}}
 
 #: Cursor customization {{{
-
-cursor #61FFCA
+# cursor #61FFCA
 
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. Its color will be
@@ -271,8 +270,7 @@ cursor #61FFCA
 #: background and foreground colors have very low contrast. Note that
 #: some themes set this value, so if you want to override it, place
 #: your value after the lines where the theme file is included.
-
-cursor_text_color #FFF4E5
+# cursor_text_color #FFF4E5
 
 #: The color of text under the cursor. If you want it rendered with
 #: the background color of the cell underneath instead, use the
@@ -1165,8 +1163,8 @@ confirm_os_window_close 0
 
 # foreground #edecee
 # background #121212
-foreground #E5E1E9
-background #131317
+# foreground #E5E1E9
+# background #131317
 
 #: The foreground and b ackground colors.
 
@@ -1248,9 +1246,8 @@ background_opacity 1.0
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
-
-selection_foreground #FFF4E5
-selection_background #3d375e
+# selection_foreground #FFF4E5
+# selection_background #3d375e
 
 #: The foreground and background colors for text selected with the
 #: mouse. Setting both of these to none will cause a "reverse video"
@@ -1265,68 +1262,57 @@ selection_background #3d375e
 #: The 256 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
-
-color0 #3d375e
-color8 #3d375e
+# color0 #3d375e
+# color8 #3d375e
 
 #: black
-
-color1 #ff6767
-color9 #ff6767
+# color1 #ff6767
+# color9 #ff6767
 
 #: red
-
-color2  #61ffca
-color10 #61ffca
+# color2  #61ffca
+# color10 #61ffca
 
 #: green
-
-color3  #ffca85
-color11 #ffca85
+# color3  #ffca85
+# color11 #ffca85
 
 #: yellow
-
-color4  #587B99
-color12 #587B99
+# color4  #587B99
+# color12 #587B99
 
 #: blue
-
-color5  #a277ff
-color13 #a277ff
+# color5  #a277ff
+# color13 #a277ff
 
 #: magenta
-
-color6  #82e2ff
-color14 #82e2ff
+# color6  #82e2ff
+# color14 #82e2ff
 
 #: cyan
-
-color7  #FFF4E5
-color15 #FFF4E5
+# color7  #FFF4E5
+# color15 #FFF4E5
 
 #: white
 
 # mark1_foreground black
 
 #: Color for marks of type 1
-
-mark1_background #98d3cb
+# mark1_background #98d3cb
 
 #: Color for marks of type 1 (light steel blue)
 
 # mark2_foreground black
 
 #: Color for marks of type 2
-
-mark2_background #FFF4E5
+# mark2_background #FFF4E5
 
 #: Color for marks of type 1 (beige)
 
 # mark3_foreground black
 
 #: Color for marks of type 3
-
-mark3_background #f274bc
+# mark3_background #f274bc
 
 #: Color for marks of type 3 (violet)
 
@@ -1403,7 +1389,7 @@ shell zsh
 #: See rc_custom_auth <https://sw.kovidgoyal.net/kitty/remote-
 #: control/#rc-custom-auth> for details.
 
-# allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
@@ -1886,7 +1872,8 @@ term xterm-kitty
 #: Copy to clipboard
 
 # map kitty_mod+c copy_to_clipboard
-map ctrl+c copy_to_clipboard
+# map ctrl+c copy_to_clipboard
+map ctrl+c copy_or_interrupt
 
 #::  There is also a copy_or_interrupt action that can be optionally
 #::  mapped to Ctrl+C. It will copy only if there is a selection and
@@ -2535,3 +2522,9 @@ map kitty_mod+f5 load_config_file
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_THEME
+# Noctalia
+include current-theme.conf
+# END_KITTY_THEME
