--- a/hyprland/.config/hypr/conf.d/autostart.conf
+++ b/hyprland/.config/hypr/conf.d/autostart.conf
@@ -1,11 +1,53 @@
+# ============================================================
+# Hyprland Autostart — Secrets, Polkit, Shell Loader, RGB
+#
+# Hyprland exec/exec-once reference:
+#   https://wiki.hyprland.org/Configuring/Keywords/#exec-and-exec-once
+# Quickshell (qs):
+#   https://github.com/Quickshell/Quickshell
+# ============================================================
 
-exec-once = hyprpaper
-# exec-once = hypridle  # will be controlled via systemctl
+
+# ------------------------------------------------------------
+# Optional: Hyprland-managed helpers (disabled)
+# (noctalia-shell currently manages wallpaper/idling)
+# ------------------------------------------------------------
+# exec-once = hyprpaper
+# exec-once = hypridle
 
 exec-once = gnome-keyring-daemon --start --components=secrets || $NOTIFY_ERROR "gnome-keyring-daemon could not be started."
 exec-once = systemctl --user start hyprpolkitagent || $NOTIFY_ERROR "hyprpolkitagent could not be started."
 
-exec = killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 quickshell
-# exec = killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 quickshell -c $HOME/.config/quickshell_new
+
+# ------------------------------------------------------------
+# Quickshell — NOCTALIA session
+# HYPRLANG conditional enables this only when HYPR_NOCTALIA is defined.
+# ------------------------------------------------------------
+
+# hyprlang if HYPR_NOCTALIA
+
+exec = git -C $HOME/.config/quickshell/noctalia/ pull| grep -q 'Already up to date.' && $NOTIFY_SUCCESS "NOCTALIA up to date." || $NOTIFY_ERROR "NOCTALIA was updated."
+exec = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 qs -c noctalia
+
+# hyprlang endif
+
+
+# ------------------------------------------------------------
+# Quickshell — CAELESTIA session
+# HYPRLANG conditional enables this only when HYPR_CAELESTIA is defined.
+# ------------------------------------------------------------
+
+# hyprlang if HYPR_CAELESTIA
+
+exec = git -C $HOME/.config/quickshell/caelestia pull| grep -q 'Already up to date.' && $NOTIFY_SUCCESS "CAELESTIA up to date." || $NOTIFY_ERROR "CAELESTIA was updated."
+exec = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 qs -c caelestia
+
+# hyprlang endif
+
+
+# ------------------------------------------------------------
+# OpenRGB — Set Leviathan V2 X LEDs to black
+# ------------------------------------------------------------
 
 exec = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; exit}')" -c 000000
+
