--- a/hyprland/.config/hypr/conf.d/monitors.conf
+++ b/hyprland/.config/hypr/conf.d/monitors.conf
@@ -1,8 +1,9 @@
 
 # Desktop
-monitor=desc:ASUSTek COMPUTER INC PG27UQR R7LMQS169187,highres@highr,auto-right,2.0
-monitor=desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,highres@highr,auto-left,2.0
+# monitor=desc:ASUSTek COMPUTER INC PG27UQR R7LMQS169187,highres@highr,auto-right,2.0
+# monitor=desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,highres@highr,auto-left,2.0
 
 # Lenovo X13Gen5
-monitor=desc:AU Optronics 0x6693,highres@highr,auto-right,1.25
-monitor=desc:AOC 2369M BCOD79A000410,highres@highr,auto-left,1.0
+monitor=desc:AU Optronics 0x6693,highres@highr,auto-right,1.2
+# monitor=desc:AU Optronics 0x6693,disable
+monitor=desc:AOC 2369M BCOD79A000410,highres@highr,auto-left,1.00
