--- a/.config/cava/config
+++ b/.config/cava/config
@@ -23,14 +23,14 @@ style = stereo
 # Color gradient for bars using template variables
 gradient = 1
 gradient_count = 8
-gradient_color_1 = '#9ff1c2'
-gradient_color_2 = '#a7eed0'
-gradient_color_3 = '#9aebd0'
-gradient_color_4 = '#78d8c0'
-gradient_color_5 = '#5bcfbe'
-gradient_color_6 = '#85dcd1'
-gradient_color_7 = '#5bd0df'
-gradient_color_8 = '#c6c177'
+gradient_color_1 = '#007991'
+gradient_color_2 = '#007195'
+gradient_color_3 = '#0082b6'
+gradient_color_4 = '#037ba6'
+gradient_color_5 = '#005e90'
+gradient_color_6 = '#0077b7'
+gradient_color_7 = '#005791'
+gradient_color_8 = '#2751f9'
 
 [smoothing]
 # Noise reduction (0-100) - higher = smoother but less responsive
