--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,9 @@
 .config/cava/shaders
 .config/cava/themes
 
+.config/kitty/theme
+
+.config/hypr/scheme/current.conf
+
 .config/yazi/plugins
 .config/yazi/package.toml
